--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                         <p class="light-text">I cannot wait, how can I get a Schwenker?</p>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 button-container wow slideInRight animated">
-                        <a href="/schwenker.html" class="button light internal-link pull-left hvr-grow">Get A Schwenker</a>
+                        <a href="schwenker.html" class="button light internal-link pull-left hvr-grow">Get A Schwenker</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
