--- a/schwenker.html
+++ b/schwenker.html
@@ -62,6 +62,7 @@
         var alert_color_error_background = '#CF000F';
 
     </script>
+        
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -241,6 +242,141 @@
             <!-- *** end  portfolio-wrapper *** -->
         </section>         
         <!-- *** end Portfolio *** -->
+        <section id="why-choose-us" class="why-choose-us">
+            <div class="container">
+                <h2>
+                Some more details <span class="light-text main-color">The original Schwenker</span></h2>
+                <div class="line main-bg margin-bottom-large"></div>
+                <div class="row text-center">
+                    <!-- *****  Service Single ***** -->
+                    <div class="col-md-4">
+                        <div>
+                            <div class="icon">
+                                <i class="fa fa-arrows-h"></i>
+                            </div>
+                            <h4>120 cm</h4>
+                        </div>
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <i class="fa fa-arrows-v"></i>
+                            </div>
+                            <h4>193 cm</h4>
+                        </div>
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <i class="fa fa-heart"></i>
+                            </div>
+                            <h4>Minimal Design</h4>
+                        </div>
+                    </div>
+                    <!-- *****  Service Single ***** -->
+                    <div class="col-md-4">
+                        <div class="service wow fadeInUp text-left">
+                            <h4>The original Schwenker</h4>
+                            <p>You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight.<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with the ultimate SchwenkTheWorld guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h1><strong>149 $</strong></h1>
+                        <br>
+                        <br>
+                        <!-- =========================
+       Send Message
+    ============================== -->
+                        <section id="send-message">
+                            <button class="button pull-left internal-link bold-text main-bg hvr-grow" data-toggle="modal" data-target="#contact-form">
+                                Purchase your Schwenker
+</button>
+                            <!-- Contact Form Modal -->
+                            <div class="modal fade contact-form" id="contact-form" tabindex="-1" role="dialog" aria-labelledby="contact-form" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                        <div class="modal-body testimonial">
+                                            <!-- *****  Contact form ***** -->
+                                            <form class="form" id="contact-form">
+                                                <div id="forminside">
+                                                    <h2 class="text-left light-text main-color">
+Order the Schwenker <span class="light-text main-color"> - please enter your details:</span></h2>
+                                                    <div class="line main-bg"></div>
+                                                    <br>
+                                                    <div class="row">
+                                                        <div class="col-md-5">
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control" id="first-name" placeholder="First name">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control" id="last-name" placeholder="Last name">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control" id="street" placeholder="Street">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-7">
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control" id="city" placeholder="City">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control" id="project-name" placeholder="Place, Country">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <input type="email" class="form-control" id="email" placeholder="Email address">
+                                                            </div>
+                                                            
+                                                        </div>
+                                                        <form name="contact" action="thank-you" netlify>
+  <p>
+    <label>Your Name:</label>
+    <input type="text" name="name">
+  </p>
+  <p>
+    <label>Your Email</label>
+    <input type="email" name="email">
+  </p>
+  <p>
+    <label>Message</label>
+    <textarea name="message"></textarea>
+  </p>
+  <p>
+    <button>Send</button>
+  </p>
+</form>
+                                                        <div class="form-group col-md-12">
+                                                            <button class="button bold-text main-bg">
+                                                                <i class="fa fa-paper-plane">Make a binding order</i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <!-- *** end row *** -->
+                                                </div>
+                                            </form>
+                                        </div>                                         
+                                        <!-- *** end modal-body *** -->
+                                    </div>                                     
+                                    <!-- *** end modal-content *** -->
+                                </div>                                 
+                                <!-- *** end modal-dialog *** -->
+                            </div>
+                            <!-- *** end Contact Form modal *** -->
+                        </section>                         
+                        <!-- ***** end send message *** -->
+                        <br />
+                        <br />
+                        <img src="img/free-shipping.jpg" width="200" /> 
+                        <p>
+                            hzlzl</p>
+                    </div>
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <!-- *****  Service Single ***** -->
+                    <div class="clearfix"></div>
+                </div>                 
+                <!-- *** end row *** -->
+            </div>             
+            <!-- *** end container *** -->
+        </section>
         <!-- =========================
        Testimonial
     ============================== -->
@@ -331,21 +467,7 @@
         <!-- *** end Testimonial *** -->
         <!-- =========================
        Promote
-    ============================== -->
-        <section id="promote" class="promote main-bg white-color">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-lg-offset-1 col-md-5 col-sm-4 text-center">
-                        <p class="light-text">OK, I want to be part of it</p>
-                    </div>
-                    <div class="col-lg-6 col-lg-offset-1 col-md-7 col-sm-8 button-container">
-                        <a href="#" class="button deep hvr-grow">Become a Schwenker</a>
-                        <span class="margin-right-small margin-left-small">or</span>
-                        <a href="#" class="button light hvr-grow">Get a Schwenker</a>
-                    </div>
-                </div>
-            </div>
-        </section>         
+    ============================== -->         
         <!-- *** end promote *** -->
         <!-- =========================
        Twitter
