--- a/schwenker.html
+++ b/schwenker.html
@@ -118,6 +118,23 @@
                         <div class="line main-bg"></div>
                         <div class="col-md-10 col-md-offset-1">
                             <div class="subtitle">Come closer to your dream and get the original SchwenkTheWorld Schwenker.</div>
+                            <form name="contact" action="thank-you" netlify>
+  <p>
+    <label>Your Name:</label>
+    <input type="text" name="name">
+  </p>
+  <p>
+    <label>Your Email</label>
+    <input type="email" name="email">
+  </p>
+  <p>
+    <label>Message</label>
+    <textarea name="message"></textarea>
+  </p>
+  <p>
+    <button>Send</button>
+  </p>
+</form>
                         </div>
                     </div>                     
                     <!-- *** end row *** -->
