--- a/index.html
+++ b/index.html
@@ -127,17 +127,13 @@ It is more than just a way of doing BBQ. It is a way of life!
     Help Us to Spread the <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarlandisch</a> BBQ Culture called "Schwenken" Join the Schwenking way of life.</p>
                             <div class="call-button">
                                 <div class="row">
-                                    <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
-                                        <a href="#portfolio" class="button pull-right internal-link bold-text light hvr-grow" data-rel="#portfolio">What is Schwenking?</a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-12">
+                                    <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-2 col-md-offset-2">
                                         <!-- =========================
        Send Message
     ============================== -->
                                         <section id="send-message">
-                                            <button class="button pull-left internal-link bold-text main-bg hvr-grow" data-toggle="modal" data-target="#contact-form">
-                                                Become a Schwenker
-</button>
+                                            <a class="button pull-right internal-link bold-text light hvr-grow" data-toggle="modal" data-target="#contact-form">
+    Become a SchwenkTheWorld ambassador</a>
                                             <!-- Contact Form Modal -->
                                             <div class="modal fade contact-form" id="contact-form" tabindex="-1" role="dialog" aria-labelledby="contact-form" aria-hidden="true">
                                                 <div class="modal-dialog modal-lg">
@@ -150,7 +146,7 @@ It is more than just a way of doing BBQ. It is a way of life!
                                                             <form class="form" id="contact-form">
                                                                 <div id="forminside">
                                                                     <h2 class="text-left">
-Becoming a Schwenker <span class="light-text main-color">The ultimate guide</span></h2>
+Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">The ultimate guide</span></h2>
                                                                     <div class="line main-bg"></div>
                                                                     <br>
                                                                     <div class="row text-left">
@@ -199,6 +195,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                     <div class="row">
                                                                         <div class="col-md-5">
                                                                             <h3 class="text-left">Your details:</h3>
+                                                                            <p class="text-left">please fill us in your details, so that we can send you the guide.</p>
                                                                             <div class="form-group">
                                                                                 <input type="text" class="form-control" id="first-name" placeholder="First name">
                                                                             </div>
@@ -212,9 +209,13 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                                 <input type="text" class="form-control" id="project-name" placeholder="Place, Country">
                                                                             </div>                                                                             
                                                                         </div>
-                                                                        <div class="col-md-7">
-                                                                            <h3 class="text-left">Column title</h3> 
-                                                                            <p class="text-left">Cras .</p>
+                                                                        <div class="col-md-7"> 
+                                                                            <p class="text-left">hhh</p>
+                                                                        </div>
+                                                                        <div class="col-xs-6 col-md-3"> 
+                                                                            <a href="#" class="thumbnail portfolio-overlay hvr-rectangle-out"> 
+                                                                                <img src="img/BangkokSchwenkThailand_Daniel.jpeg" alt=""> 
+                                                                            </a>                                                                             
                                                                         </div>
                                                                         <br>
                                                                         <div class="form-group col-md-12">
@@ -236,6 +237,9 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                             <!-- *** end Contact Form modal *** -->
                                         </section>                                         
                                         <!-- *** end Send Message *** -->
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-12">
+                                        <a href="schwenker.html" class="button pull-left internal-link bold-text main-bg hvr-grow" data-rel="#portfolio">Get your Schwenker</a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
