--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                                                                     </div>
                                                                     <br>
                                                                     <div class="row">
-                                                                        <div class="col-md-5">
+                                                                        <div class="col-md-6">
                                                                             <h3 class="text-left">Your details:</h3>
                                                                             <p class="text-left">please fill us in your details, so that we can send you the guide.</p>
                                                                             <div class="form-group">
@@ -209,13 +209,9 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                                                                                 <input type="text" class="form-control" id="project-name" placeholder="Place, Country">
                                                                             </div>                                                                             
                                                                         </div>
-                                                                        <div class="col-md-7"> 
-                                                                            <p class="text-left">hhh</p>
-                                                                        </div>
-                                                                        <div class="col-xs-6 col-md-3"> 
-                                                                            <a href="#" class="thumbnail portfolio-overlay hvr-rectangle-out"> 
-                                                                                <img src="img/BangkokSchwenkThailand_Daniel.jpeg" alt=""> 
-                                                                            </a>                                                                             
+                                                                        <div class="col-md-6"> 
+                                                                            <img src="img/BangkokSchwenkThailand_Daniel.jpeg" class="img-responsive" />
+                                                                            <p class="text-left">^ this is a photo of our ambassador in Bangkok, Daniel.</p>
                                                                         </div>
                                                                         <br>
                                                                         <div class="form-group col-md-12">
@@ -589,7 +585,7 @@ See here some exaples of our glorious missions.</p>
                 <div class="container padding-large text-center">
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1">
-                            <h2>Where we already Schwenk:</h2>
+                            <h2>Where we have already schwenked:</h2>
                         </div>
                     </div>
                 </div>
