--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <span class="nav-label">Home</span>
                 </li>
                 <li data-rel="#portfolio">
-                    <span class="nav-label">Portfolio</span>
+                    <span class="nav-label">Our Schwenks</span>
                 </li>
                 <li data-rel="#testimonial">
                     <span class="nav-label">Testimonial</span>
