--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
-                            </div>
+                            </div><br/>
+                            <p class="light margin-bottom-medium">Want to know what is schwenken? Or you want to see some photos of our adventures, check out further down.</p>
                         </div>
                         <div class="overlay"></div>
                     </div>
