--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <li data-rel="#map">
                     <span class="nav-label">Where?</span>
                 </li>
-                <li data-rel="#map">
-                    <span class="nav-label">Get a Schwenker</span>
+                <li>
+                    <a href="schwenker.html" style="color:#fff"><span class="nav-label">Get a Schwenker</span></a>
                 </li>
             </ul>
         </div>         
@@ -239,7 +239,8 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
-                            </div><br/>
+                            </div>
+                            <br />
                             <p class="light margin-bottom-medium">Want to know what is schwenken? Or you want to see some photos of our adventures, check out further down.</p>
                         </div>
                         <div class="overlay"></div>
@@ -572,7 +573,7 @@ See here some exaples of our glorious missions.</p>
                     <div class="col-lg-6 col-lg-offset-1 col-md-7 col-sm-8 button-container">
                         <a href="#" class="button deep hvr-grow">Become a Schwenker</a>
                         <span class="margin-right-small margin-left-small">or</span>
-                        <a href="#" class="button light hvr-grow">Get a Schwenker</a>
+                        <a href="schwenker.html" class="button light hvr-grow">Get a Schwenker</a>
                     </div>
                 </div>
             </div>
