--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 </div>
                         <div class="carousel-caption">
                             <h1 class="light margin-bottom-medium mat-none"><font face="Campton Bold, sans-serif"><b>Schwenk The World</b></font></h1>
-                            <p class="light margin-bottom-medium">Schwenken is the Culture of a small country in the heart of Europe called Saarland.
-It is more than just a way of doing BBQ. It is a way of life!
-    Help Us to Spread the <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarlandisch</a> BBQ Culture called "Schwenken" Join the Schwenking way of life.</p>
+                            <p class="light margin-bottom-medium">Schwenken is the Culture of a small country in the heart of Europe called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank" style="color:#fff">Saarland</a>.
+It is more than just a way of doing BBQ. It is a way of life!<br />
+    Help Us to Spread Schwenking all over the world.</p>
                             <div class="call-button">
                                 <div class="row">
                                     <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-2 col-md-offset-2">
@@ -235,7 +235,7 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                                         <!-- *** end Send Message *** -->
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-12">
-                                        <a href="schwenker.html" class="button pull-left internal-link bold-text main-bg hvr-grow" data-rel="#portfolio">Get your Schwenker</a>
+                                        <a href="schwenker.html" class="button pull-left internal-link bold-text main-bg hvr-grow" data-rel="#portfolio">Get your own Schwenker</a>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
