--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ Becoming a SchwenkTheWorld ambassador<br> <span class="light-text main-color">Th
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="subtitle">Check out some of our greatest Schwenks.</div>
-                        <p style="color:#000">Traveling the world on a Schwenking mission - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
-See here some exaples of our glorious missions.</p>
+                        <p style="color:#000">Traveling the world on a Schwenking mission - In order to convince every human being on the planet, we are travelling the world and schwenk.
+See here some examples of our glorious missions.</p>
                     </div>
                 </div>                 
                 <!-- *** end row *** -->
@@ -305,19 +305,19 @@ See here some exaples of our glorious missions.</p>
                             <a href="#" data-filter="*" class="active"><i class="icon-grid"></i></a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".print">Europe</a>
+                            <a href="#" data-filter=".europe">Europe</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".icon">America</a>
+                            <a href="#" data-filter=".america">America</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".photography">Africa</a>
+                            <a href="#" data-filter=".africa">Africa</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".web-design">Australia</a>
+                            <a href="#" data-filter=".australia">Australia</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".ui">Asia</a>
+                            <a href="#" data-filter=".asia">Asia</a>
                         </li>
                     </ul>
                 </div>                 
@@ -329,9 +329,9 @@ See here some exaples of our glorious missions.</p>
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item print">
+                <div class="portfolio-item europe">
                     <div class="portfolio">
-                        <a href="img/Projekts/alle.jpg" data-lightbox-gallery="portfolio">
+                        <a href="https://www.youtube.com/watch?v=TpWHJFSLYbQ" data-lightbox-gallery="legalize">
                             <img src="img/Projekts/alle.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -346,26 +346,27 @@ See here some exaples of our glorious missions.</p>
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item photography">
+                <div class="portfolio-item africa">
                     <div class="portfolio">
-                        <a href="img/Projekts/bonaberi.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/Projekts/bonaberi.jpg" alt="Portfolio 2" />
+                        <a href="img/Projekts/bonaberi/bonaberi.jpg" title="Yes indeed, they schwenk bananas in Camaroon" data-lightbox-gallery="bonaberi">
+                            <img src="img/Projekts/bonaberi/bonaberi.jpg" alt="Portfolio 2" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
                                 <h2 class="margin-bottom-small">Schwenk Bonaberi, Africa</h2>
-                                <p>To be more exact, Bernhard went to Camarun to Schwenk Bonaberi.</p>
+                                <p>To be more exact, Bernhard went to Camaroon to Schwenk Bonaberi.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
+                        <a href="img/Projekts/bonaberi/Camerun.jpg" title="Here you can see Bernhard schwenking with his friends from Cameroon" data-lightbox-gallery="bonaberi"></a>
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item photography">
+                <div class="portfolio-item asia">
                     <div class="portfolio">
-                        <a href="img/Projekts/tokyo/tokyoSchwenk.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/tokyo/tokyoSchwenk.jpg" data-lightbox-gallery="tokyo">
                             <img src="img/Projekts/tokyo/tokyoSchwenk.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -375,15 +376,19 @@ See here some exaples of our glorious missions.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
+                        <a href="img/Projekts/tokyo/JAPANthe-big-schwenk-bbq.jpeg" title="That's how it looks like when japanese people start to schwenk" data-lightbox-gallery="tokyo"></a>
+                        <a href="img/Projekts/tokyo/JAPANTokyo-Schwenk-2.png" data-lightbox-gallery="tokyo"></a>
+                        <a href="img/Projekts/tokyo/JAPANTokyo-Schwenk-1.png" title="That's Julien, our japanese ambassador, he is the reason why we started Schwenking the World" data-lightbox-gallery="tokyo"></a>
+                        <a href="img/Projekts/tokyo/JAPANTokyo-Schwenken-4.png" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo"></a>
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item print">
+                <div class="portfolio-item asia">
                     <div class="portfolio">
-                        <a href="img/Projekts/schwenkok.jpg" data-lightbox-gallery="portfolio">
+                        <a href="https://www.youtube.com/watch?v=sfHxgl0rpQU" data-lightbox-gallery="schwengkok">
                             <img src="img/Projekts/schwenkok.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -399,9 +404,9 @@ See here some exaples of our glorious missions.</p>
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item ui">
+                <div class="portfolio-item europe">
                     <div class="portfolio">
-                        <a href="img/Projekts/SchwenkDEiffel.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/Schwenk dEiffel.mp4" data-lightbox-gallery="eiffel">
                             <img src="img/Projekts/SchwenkDEiffel.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -411,16 +416,17 @@ See here some exaples of our glorious missions.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
+                        <a href="img/Projekts/SchwenkDEiffel.jpg" data-lightbox-gallery="eiffel">
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item web-design">
+                <div class="portfolio-item asia">
                     <div class="portfolio">
-                        <a href="img/Projekts/Schwenk4_RomainAlary.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/Projekts/Schwenk4_RomainAlary.jpg" alt="Portfolio 1" />
+                        <a href="img/Projekts/israel/Schwenk4_RomainAlary.jpg" data-lightbox-gallery="portfolio">
+                            <img src="img/Projekts/israel/Schwenk4_RomainAlary.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
                                 <h2 class="margin-bottom-small">Schwenk Florentin - Israel</h2>
@@ -429,15 +435,16 @@ See here some exaples of our glorious missions.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
+                        <a href="img/Projekts/israel/ISRAELSchwenkFlorentineFlyer.jpg" data-lightbox-gallery="portfolio">
                     </div>
                 </div>                 
                 <!-- *** end  portfolio-item *** -->
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item web-design">
+                <div class="portfolio-item europe">
                     <div class="portfolio">
-                        <a href="img/Projekts/schwenkthecamp-MARE.jpg" data-lightbox-gallery="portfolio">
+                        <a href="https://vimeo.com/57320569" data-lightbox-gallery="marseille">
                             <img src="img/Projekts/schwenkthecamp-MARE.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -453,9 +460,9 @@ See here some exaples of our glorious missions.</p>
                 <!-- =========================
                Portfolio item
             ============================== -->
-                <div class="portfolio-item icon">
+                <div class="portfolio-item america">
                     <div class="portfolio">
-                        <a href="img/Projekts/lapaz.jpg" data-lightbox-gallery="portfolio">
+                        <a href="https://vimeo.com/57740437" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/lapaz.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -470,7 +477,6 @@ See here some exaples of our glorious missions.</p>
                 <!-- *** end  portfolio-item *** -->
             </div>             
             <!-- *** end  portfolio-wrapper *** -->
-            <a href="#" class="button light margin-top-medium margin-bottom-medium hvr-grow"><i class="icon-reload"></i> Load More</a>
         </section>         
         <!-- *** end Portfolio *** -->
         <!-- =========================
