--- a/index.html
+++ b/index.html
@@ -743,5 +743,10 @@ See here some examples of our glorious missions.</p>
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/notie.js"></script>
         <script src="js/main.js"></script>
+                <script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/70351/script.js');
+</script>
     </body>
 </html>
