--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ It is more than just a way of doing BBQ. It is a way of life!<br />
        Send Message
     ============================== -->
                                         <section id="send-message">
-                                            <a class="button pull-right internal-link bold-text light hvr-grow" data-toggle="modal" data-target="#contact-form">
+                                            <a class="button pull-right internal-link bold-text light hvr-grow" data-gsc-widget="145026">
     Become a SchwenkTheWorld ambassador</a>
                                             <!-- Contact Form Modal -->
                                             <div class="modal fade contact-form" id="contact-form" tabindex="-1" role="dialog" aria-labelledby="contact-form" aria-hidden="true">
