--- a/schwenker.html
+++ b/schwenker.html
@@ -283,6 +283,18 @@
        Send Message
     ============================== -->
                         <section id="send-message">
+                            <form action="/your-server-side-code" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
+    data-amount="14900"
+    data-name="SchwenkTheWorld.com"
+    data-description="Widget"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-locale="auto"
+    data-zip-code="true">
+  </script>
+</form>
                             <button class="button pull-left internal-link bold-text main-bg hvr-grow" data-toggle="modal" data-target="#contact-form">
                                 Purchase your Schwenker
 </button>
