--- a/schwenker.html
+++ b/schwenker.html
@@ -282,8 +282,8 @@
                         <!-- =========================
        Send Message
     ============================== -->
-                        <section id="send-message">charge...
-                            <form action="/charge.php" method="POST">
+                        <section id="send-message">charge....
+                            <form action="charge.php" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
