--- a/schwenker.html
+++ b/schwenker.html
@@ -282,8 +282,32 @@
                         <!-- =========================
        Send Message
     ============================== -->
-                        <section id="send-message">charge....
-                            <form action="charge.php" method="POST">
+                        
+<?php require_once ('stripe-php-4.4.0/init.php'); ?> 
+                        <?php
+function charge()
+        {
+// Set your secret key: remember to change this to your live secret key in production
+// See your keys here: https://dashboard.stripe.com/account/apikeys
+\Stripe\Stripe::setApiKey("sk_test_x5K3pRsocuKhcmMWtsX7gBQI");
+
+// Token is created using Stripe.js or Checkout!
+// Get the payment token submitted by the form:
+$token = $_POST['stripeToken'];
+
+// Charge the user's card:
+$charge = \Stripe\Charge::create(array(
+  "amount" => 1000,
+  "currency" => "eur",
+  "description" => "Example charge",
+  "source" => $token,
+));
+}
+
+?>
+
+                        <section id="send-message">charge.
+                            <form action="charge()" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
@@ -512,9 +536,7 @@ Order the Schwenker <span class="light-text main-color"> - please enter your det
         <div class="back-to-top" data-rel="header">
             <i class="icon-up"></i>
         </div>
-        <div>
-<?php require_once ('stripe-php-4.4.0/init.php'); ?> 
-</div>
+        
         <!-- =========================
      JavaScripts
     ============================== -->
