--- a/schwenker.html
+++ b/schwenker.html
@@ -286,8 +286,8 @@
 <?php require_once ('stripe-php-4.4.0/init.php'); ?> 
 
 
-                        <section id="send-message">cha
-                            <form method="POST" action="charge.js" >
+                        <section id="send-message">charg
+                            <form method="POST" action="charge.php" >
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
