--- a/schwenker.html
+++ b/schwenker.html
@@ -282,7 +282,7 @@
                         <!-- =========================
        Send Message
     ============================== -->
-                        <section id="send-message">charge...
+                        <section id="send-message">
                             <form action="/charge.php" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
