--- a/schwenker.html
+++ b/schwenker.html
@@ -283,7 +283,7 @@
        Send Message
     ============================== -->
                         <section id="send-message">
-                            <form action="/charge.php" method="POST">
+                            <form action="/your-server-side-code" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
