--- a/schwenker.html
+++ b/schwenker.html
@@ -283,75 +283,13 @@
        Send Message
     ============================== -->
                         <section id="send-message">
-                            <form action="/your-server-side-code" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_gOoL2pWNZHDHSCscID0pKHqw"
-    data-amount="14900"
-    data-name="SchwenkTheWorld.com"
-    data-description="Widget"
-    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-    data-locale="auto"
-    data-zip-code="true">
-  </script>
+                            
+                           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="9TBU33EE6FL2Y">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
-                            <button class="button pull-left internal-link bold-text main-bg hvr-grow" data-toggle="modal" data-target="#contact-form">
-                                Purchase your Schwenker
-</button>
-                            <!-- Contact Form Modal -->
-                            <div class="modal fade contact-form" id="contact-form" tabindex="-1" role="dialog" aria-labelledby="contact-form" aria-hidden="true">
-                                <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">×</span>
-                                        </button>
-                                        <div class="modal-body testimonial">
-                                            <!-- *****  Contact form ***** -->
-                                            <form class="form" id="contact-form">
-                                                <div id="forminside">
-                                                    <h2 class="text-left light-text main-color">
-Order the Schwenker <span class="light-text main-color"> - please enter your details:</span></h2>
-                                                    <div class="line main-bg"></div>
-                                                    <br>
-                                                    <div class="row">
-                                                        <div class="col-md-5">
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control" id="first-name" placeholder="First name">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control" id="last-name" placeholder="Last name">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control" id="street" placeholder="Street">
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-7">
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control" id="city" placeholder="City">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <input type="text" class="form-control" id="project-name" placeholder="Place, Country">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <input type="email" class="form-control" id="email" placeholder="Email address">
-                                                            </div>
-                                                        </div>
-                                                        <div class="form-group col-md-12">
-                                                            <button class="button bold-text main-bg">
-                                                                <i class="fa fa-paper-plane">Make a binding order</i>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                    <!-- *** end row *** -->
-                                                </div>
-                                            </form>
-                                        </div>                                         
-                                        <!-- *** end modal-body *** -->
-                                    </div>                                     
-                                    <!-- *** end modal-content *** -->
-                                </div>                                 
-                                <!-- *** end modal-dialog *** -->
-                            </div>
                             <!-- *** end Contact Form modal *** -->
                         </section>                         
                         <!-- ***** end send message *** -->
